@@ -33,6 +33,7 @@ const struct GlobalDBItem globalDBItems[] = {
   { "_flagPoleWidth",		"0.025",                        false, StateDatabase::Locked},
   { "_flagPoleSize",		"0.8",				false, StateDatabase::Locked},
   { "_flagRadius",		"2.5",				false, StateDatabase::Locked},
+  { "_friction",		"0",				false, StateDatabase::Locked},
   { "_gMissileAng",		"0.628319",			false, StateDatabase::Locked},
   { "_gMissileAdLife",		"0.95",				false, StateDatabase::Locked},
   { "_gravity",			"-9.8",				false, StateDatabase::Locked},
@@ -48,6 +49,7 @@ const struct GlobalDBItem globalDBItems[] = {
   { "_maxLOD",			"32767.0",			false, StateDatabase::Locked},
   { "_momentumAngAcc",		"1.0",				false, StateDatabase::Locked},
   { "_momentumLinAcc",		"1.0",				false, StateDatabase::Locked},
+  { "_momentumFriction",	"0",				false, StateDatabase::Locked},
   { "_mGunAdLife",		"1.0 / _mGunAdRate",		false, StateDatabase::Locked},
   { "_mGunAdRate",		"10.0",				false, StateDatabase::Locked},
   { "_mGunAdVel",		"1.5",				false, StateDatabase::Locked},
